perf: load entire wal into memory for faster replay